// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module GoalCreation form snapshots basic render 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <TextInput
    fieldProps={Object {}}
    key="title"
    name="title"
    placeholder="GOALCREATION.FORM.TITLE"
  />
  <TextInput
    fieldProps={Object {}}
    key="start"
    name="start"
    placeholder="GOALCREATION.FORM.START"
  />
  <TextInput
    fieldProps={Object {}}
    key="current"
    name="current"
    placeholder="GOALCREATION.FORM.CURRENT"
  />
  <TextInput
    fieldProps={Object {}}
    key="end"
    name="end"
    placeholder="GOALCREATION.FORM.END"
  />
  <Button
    TouchableComponent={[Function]}
    buttonStyle={
      Object {
        "borderRadius": 3,
      }
    }
    clear={false}
    containerStyle={
      Array [
        Object {
          "marginTop": 10,
        },
        Object {
          "opacity": 0.7,
        },
      ]
    }
    disabled={true}
    iconRight={false}
    loadingProps={
      Object {
        "color": "white",
        "size": "small",
      }
    }
    onPress={[MockFunction]}
    title="goalCreation.form.submit"
  />
</View>
`;

exports[`module GoalCreation form snapshots when form is valid 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <TextInput
    fieldProps={Object {}}
    key="title"
    name="title"
    placeholder="GOALCREATION.FORM.TITLE"
  />
  <TextInput
    fieldProps={Object {}}
    key="start"
    name="start"
    placeholder="GOALCREATION.FORM.START"
  />
  <TextInput
    fieldProps={Object {}}
    key="current"
    name="current"
    placeholder="GOALCREATION.FORM.CURRENT"
  />
  <TextInput
    fieldProps={Object {}}
    key="end"
    name="end"
    placeholder="GOALCREATION.FORM.END"
  />
  <Button
    TouchableComponent={[Function]}
    buttonStyle={
      Object {
        "borderRadius": 3,
      }
    }
    clear={false}
    containerStyle={
      Array [
        Object {
          "marginTop": 10,
        },
        false,
      ]
    }
    disabled={false}
    iconRight={false}
    loadingProps={
      Object {
        "color": "white",
        "size": "small",
      }
    }
    onPress={[MockFunction]}
    title="goalCreation.form.submit"
  />
</View>
`;
